force-app/main/default/objects/GsGoal__c/GsGoal__c.object-meta.xml
<CustomObject>
    <description>Main object of the GoalSetter application. It is used to capture all goal related data.</description>
    <label>Goal</label>
    <nameField>
        <label>Study</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>