force-app/main/default/objects/GsGoal__c/fields/GsAchieved__c.field-meta.xml
<CustomField>
    <fullName>GsAchieved__c</fullName>
    <description>This formula field prints the Achieved Date in a user-friendly format depending on the goal record type. Cosmos goals (LabCorp, Parexel) require a date including a day.</description>
    <formula>IF(OR(ISNULL(GsAchievedDate__c), ISBLANK(GsAchievedDate__c)),
&quot;&quot;,
CASE(MONTH(GsAchievedDate__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;&quot;) &amp; 

IF( OR(RecordType.DeveloperName = &quot;LabCorp_Goal&quot;, RecordType.DeveloperName = &quot;GsParexelGoal&quot;), &quot; &quot; &amp; TEXT(DAY(GsAchievedDate__c)) &amp; &quot;, &quot; , &quot; &quot;) 
&amp; TEXT(YEAR(GsAchievedDate__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved</label>
    <type>Text</type>
</CustomField>