force-app/main/default/objects/GsGoal__c/fields/GsAchievedDate__c.field-meta.xml
<CustomField>
    <fullName>GsAchievedDate__c</fullName>
    <description>The exact date the goal was achieved</description>
    <label>Achieved Date</label>
    <type>Date</type>
</CustomField>