force-app/main/default/objects/GsGoal__c/fields/GsAchievedMonth__c.field-meta.xml
<CustomField>
    <fullName>GsAchievedMonth__c</fullName>
    <description>Month selector for the achieved date (deprecated)</description>
    <label>Achieved Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GsMonths</valueSetName>
    </valueSet>
</CustomField>