force-app/main/default/objects/GsGoal__c/fields/GsAdminGoal__c.field-meta.xml
<CustomField>
    <fullName>GsAdminGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the goal was created by the “New Goal Admin” flow</description>
    <label>Admin Goal</label>
    <type>Checkbox</type>
</CustomField>