force-app/main/default/objects/GsGoal__c/fields/GsApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>GsApprovedBy__c</fullName>
    <description>This field is required if the goal is created or edited after period freeze or when the goal is revised.</description>
    <label>Approved by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPT/IPT</fullName>
            </value>
            <value>
                <fullName>CPRM</fullName>
            </value>
            <value>
                <fullName>GPDC</fullName>
                <isActive>false</isActive>
                <label>GPDC</label>
            </value>
            <value>
                <fullName>TADC</fullName>
                <isActive>false</isActive>
                <label>TADC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>