force-app/main/default/objects/GsGoal__c/fields/GsComments__c.field-meta.xml
<CustomField>
    <fullName>GsComments__c</fullName>
    <description>This field can be entered whenever the goal is created or edited with the “New Goal” or “Edit Goal” flows.</description>
    <label>Comments</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>