force-app/main/default/objects/GsGoal__c/fields/GsCorrect__c.field-meta.xml
<CustomField>
    <fullName>GsCorrect__c</fullName>
    <description>Legacy field to store the &apos;correct&apos; values for migrated goals</description>
    <label>Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>