force-app/main/default/objects/GsGoal__c/fields/GsCorrectedPatsRandNumber__c.field-meta.xml
<CustomField>
    <fullName>GsCorrectedPatsRandNumber__c</fullName>
    <description>Legacy field to store &apos;corrected pats rand Number&apos; from migrated goals</description>
    <label>Corrected Pats Rand Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>