force-app/main/default/objects/GsGoal__c/fields/GsCountry__c.field-meta.xml
<CustomField>
    <fullName>GsCountry__c</fullName>
    <description>Legacy field to store country values from migrated goals</description>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>