force-app/main/default/objects/GsGoal__c/fields/GsCovanceGoal__c.field-meta.xml
<CustomField>
    <fullName>GsCovanceGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy field to store Covance Goal values from migrated goals</description>
    <label>Covance Goal</label>
    <type>Checkbox</type>
</CustomField>