force-app/main/default/objects/GsGoal__c/fields/GsCreatedAfterFreeze__c.field-meta.xml
<CustomField>
    <fullName>GsCreatedAfterFreeze__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true by the “New Goal” flow in case the goal was created after the goal period was locked.</description>
    <label>Created After Freeze</label>
    <type>Checkbox</type>
</CustomField>