force-app/main/default/objects/GsGoal__c/fields/GsCroGoal__c.field-meta.xml
<CustomField>
    <fullName>GsCroGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if a goal is a CRO goal (used for historical goals and Sophia API)</description>
    <label>CRO Goal</label>
    <type>Checkbox</type>
</CustomField>