force-app/main/default/objects/GsGoal__c/fields/GsDGoal__c.field-meta.xml
<CustomField>
    <fullName>GsDGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy field to store DGoal values from migrated goals</description>
    <label>D Goal</label>
    <type>Checkbox</type>
</CustomField>