force-app/main/default/objects/GsGoal__c/fields/GsFinal__c.field-meta.xml
<CustomField>
    <fullName>GsFinal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the goal is final/frozen</description>
    <label>Final</label>
    <type>Checkbox</type>
</CustomField>