force-app/main/default/objects/GsGoal__c/fields/GsFinalCosmosDelivery__c.field-meta.xml
<CustomField>
    <fullName>GsFinalCosmosDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the goal is a Final COSMOS delivery goal</description>
    <label>Final COSMOS delivery</label>
    <type>Checkbox</type>
</CustomField>