force-app/main/default/objects/GsGoal__c/fields/GsFinalDate__c.field-meta.xml
<CustomField>
    <fullName>GsFinalDate__c</fullName>
    <description>The Final Date is written automatically by &quot;Mark As final&quot; or &quot;Lock Goal Period&quot; flows indicating when the goal was set to final.</description>
    <label>Final Date</label>
    <type>Date</type>
</CustomField>