force-app/main/default/objects/GsGoal__c/fields/GsGoalPeriod__c.field-meta.xml
<CustomField>
    <fullName>GsGoalPeriod__c</fullName>
    <description>Goal Period is the Master-Detail reference to the Goal Setter period</description>
    <inlineHelpText>Within this period that goal has to be achieved.</inlineHelpText>
    <label>Goal Period</label>
    <referenceTo>GsGoalPeriod__c</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>