force-app/main/default/objects/GsGoal__c/fields/GsGoalThatHasBeenRevised__c.field-meta.xml
<CustomField>
    <fullName>GsGoalThatHasBeenRevised__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Predecessor of migrated goals.</description>
    <label>Goal That Has Been Revised</label>
    <referenceTo>GsGoal__c</referenceTo>
    <relationshipLabel>Predecessor Goals</relationshipLabel>
    <relationshipName>PredecessorGoals</relationshipName>
    <type>Lookup</type>
</CustomField>