force-app/main/default/objects/GsGoal__c/fields/GsGoalTitle__c.field-meta.xml
<CustomField>
    <fullName>GsGoalTitle__c</fullName>
    <description>The goal title is either written automatically by the “New Goal”, “Edit Goal” or “Revise Goal” flow in case a certain standard goal was selected. In this case, the value from the selected standard goal is copied. If the standard goal contains a placeholder, the replacement value will also be inserted. If the standard goal is set to “-- enter goal manually --&quot;, the goal title is entered manually.</description>
    <label>Goal Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>