force-app/main/default/objects/GsGoal__c/fields/GsGoalValue__c.field-meta.xml
<CustomField>
    <fullName>GsGoalValue__c</fullName>
    <description>Store the actual percent value of study&apos;s standard goal that contains a placeholder ([value])</description>
    <label>Goal Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>