force-app/main/default/objects/GsGoal__c/fields/GsHistory__c.field-meta.xml
<CustomField>
    <fullName>GsHistory__c</fullName>
    <description>The Changelog gets written during the &quot;Revise Goal&quot; flow by appending the old and new value of changed fields together with the modifier and modification timestamp to the log.</description>
    <label>Changelog</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>