force-app/main/default/objects/GsGoal__c/fields/GsIsLate__c.field-meta.xml
<CustomField>
    <fullName>GsIsLate__c</fullName>
    <description>This formula field indicates if the goal was not achieved until target date or was achieved after target date.</description>
    <formula>OR(
AND(
TEXT(GsStatus__c) != &quot;Achieved&quot;,
GsTargetDate__c - TODAY() &lt; 0
),
AND(
TEXT(GsStatus__c) = &quot;Achieved&quot;,
GsTargetDate__c &lt;  GsAchievedDate__c 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Late</label>
    <type>Checkbox</type>
</CustomField>