force-app/main/default/objects/GsGoal__c/fields/GsKeyGoal__c.field-meta.xml
<CustomField>
    <fullName>GsKeyGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a goal is a key goal</description>
    <label>IPT Key Goal</label>
    <type>Checkbox</type>
</CustomField>