force-app/main/default/objects/GsGoal__c/fields/GsLabcorpIncentiveGoal__c.field-meta.xml
<CustomField>
    <fullName>GsLabcorpIncentiveGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a goal is an incentive goal</description>
    <label>Labcorp Incentive Goal</label>
    <type>Checkbox</type>
</CustomField>