force-app/main/default/objects/GsGoal__c/fields/GsLockIcon__c.field-meta.xml
<CustomField>
    <fullName>GsLockIcon__c</fullName>
    <description>This is an icon field that displays a padlock in case the “Final” field is set to true.</description>
    <formula>IF(GsFinal__c, IMAGE(&quot;/resource/1669016637000/GoalSetterFinalLock&quot;, &quot;final&quot;, 16,16), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lock</label>
    <type>Text</type>
</CustomField>