force-app/main/default/objects/GsGoal__c/fields/GsModified__c.field-meta.xml
<CustomField>
    <fullName>GsModified__c</fullName>
    <description>Deprecated</description>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified</label>
    <type>DateTime</type>
</CustomField>