force-app/main/default/objects/GsGoal__c/fields/GsPatientsRandomized__c.field-meta.xml
<CustomField>
    <fullName>GsPatientsRandomized__c</fullName>
    <description>Legacy field to store Patient Randomized values from migrated goals</description>
    <label>Patients Randomized</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>