force-app/main/default/objects/GsGoal__c/fields/GsProgram__c.field-meta.xml
<CustomField>
    <fullName>GsProgram__c</fullName>
    <description>The program (BAY-Number) is written automatically by the “New Goal” flow based on the selected study by the user. The data is retrieved from IMPACT.</description>
    <label>Program</label>
    <length>20</length>
    <type>Text</type>
</CustomField>