force-app/main/default/objects/GsGoal__c/fields/GsProgress__c.field-meta.xml
<CustomField>
    <fullName>GsProgress__c</fullName>
    <description>Visual progress indicator for the goal based on the status</description>
    <formula>CASE(GsStatus__c,
&quot;On Track&quot;,IMAGE(&quot;/resource/GoalSetter/img/status_ontrack.png&quot;, &quot;On Track&quot;,24,24),
&quot;At Risk&quot;,IMAGE(&quot;/resource/GoalSetter/img/status_atrisk.png&quot;, &quot;At Risk&quot;,24,24),
&quot;Achieved&quot;,IMAGE(&quot;/resource/GoalSetter/img/status_achieved.png&quot;, &quot;Achieved&quot;,24,24),
&quot;Not Achieved&quot;,IMAGE(&quot;/resource/GoalSetter/img/status_notachieved.png&quot;, &quot;Not Achieved&quot;,24,24),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>