force-app/main/default/objects/GsGoal__c/fields/GsProject__c.field-meta.xml
<CustomField>
    <fullName>GsProject__c</fullName>
    <description>The project is being written automatically by the “New Goal” flow unless the user creates a clinical team goal record type and selects “General” for study. In this case, the project needs to be selected manually by the user. All study and project information is retrieved from IMPACT.</description>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>