force-app/main/default/objects/GsGoal__c/fields/GsQualityGoal__c.field-meta.xml
<CustomField>
    <fullName>GsQualityGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy field to store Quality Goal values from migrated goals</description>
    <label>Quality Goal</label>
    <type>Checkbox</type>
</CustomField>