force-app/main/default/objects/GsGoal__c/fields/GsRevised__c.field-meta.xml
<CustomField>
    <fullName>GsRevised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the goal is revised</description>
    <label>Revised</label>
    <type>Checkbox</type>
</CustomField>