force-app/main/default/objects/GsGoal__c/fields/GsRevisedGoal__c.field-meta.xml
<CustomField>
    <fullName>GsRevisedGoal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Successor for migrated, revised goals</description>
    <label>Revised Goal</label>
    <referenceTo>GsGoal__c</referenceTo>
    <relationshipLabel>Successor Goals</relationshipLabel>
    <relationshipName>SuccessorGoals</relationshipName>
    <type>Lookup</type>
</CustomField>