force-app/main/default/objects/GsGoal__c/fields/GsSharePointCreated__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointCreated__c</fullName>
    <description>Legacy field to store the created date for migrated goals</description>
    <label>SharePoint Created</label>
    <type>DateTime</type>
</CustomField>