force-app/main/default/objects/GsGoal__c/fields/GsSharePointCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointCreatedBy__c</fullName>
    <description>Legacy field to store the Created By for migrated goals</description>
    <label>SharePoint Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>