force-app/main/default/objects/GsGoal__c/fields/GsSharePointId__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointId__c</fullName>
    <description>Legacy Goal ID from SharePoint</description>
    <externalId>true</externalId>
    <label>SharePoint Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>