force-app/main/default/objects/GsGoal__c/fields/GsSharePointMigrated__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if goal was migrated from SharePoint</description>
    <label>SharePoint Migrated</label>
    <type>Checkbox</type>
</CustomField>