force-app/main/default/objects/GsGoal__c/fields/GsSharePointModified__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointModified__c</fullName>
    <description>Legacy field to store the last modified date for migrated goals</description>
    <label>SharePoint Modified</label>
    <type>DateTime</type>
</CustomField>