force-app/main/default/objects/GsGoal__c/fields/GsSharePointModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointModifiedBy__c</fullName>
    <description>Legacy field to store the last modified by for migrated goals</description>
    <label>SharePoint Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>