force-app/main/default/objects/GsGoal__c/fields/GsStandardGoal__c.field-meta.xml
<CustomField>
    <fullName>GsStandardGoal__c</fullName>
    <description>Picklist for standard goals based on record type</description>
    <label>Standard Goal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achieve [value]% RTE</fullName>
            </value>
            <value>
                <fullName>Achieve [value]% subject cleaned</fullName>
            </value>
            <value>
                <fullName>Achieve 1st site RTE</fullName>
            </value>
            <value>
                <fullName>Achieve Clean Database 4 weeks after LPLV</fullName>
            </value>
            <value>
                <fullName>Achieve final Protocol</fullName>
            </value>
            <value>
                <fullName>Achieve LPFV</fullName>
            </value>
            <value>
                <fullName>All systems ready for RTE</fullName>
            </value>
            <value>
                <fullName>Complete Protocol Feasibility</fullName>
                <label>Complete Feasibility</label>
            </value>
            <value>
                <fullName>CSR final</fullName>
            </value>
            <value>
                <fullName>CTA submissions completed</fullName>
            </value>
            <value>
                <fullName>Final Country selection</fullName>
            </value>
            <value>
                <fullName>Implement Protocol Amendment</fullName>
            </value>
            <value>
                <fullName>More than 95% compliance to the monitoring strategy</fullName>
            </value>
            <value>
                <fullName>Non-system queries closed in &lt;21 days of opening</fullName>
            </value>
            <value>
                <fullName>Protocol Level 1</fullName>
            </value>
            <value>
                <fullName>Protocol Level 2</fullName>
            </value>
            <value>
                <fullName>Randomize [value]% subjects</fullName>
            </value>
            <value>
                <fullName>Stable CDP</fullName>
            </value>
            <value>
                <fullName>Support D6 preparation</fullName>
            </value>
            <value>
                <fullName>Support D7 preparation</fullName>
            </value>
            <value>
                <fullName>Support Scientific Advice Meetings</fullName>
            </value>
            <value>
                <fullName>Support Submission Activities</fullName>
            </value>
            <value>
                <fullName>TFL within 3 weeks after Clean Database</fullName>
            </value>
            <value>
                <fullName>TMF archived</fullName>
            </value>
            <value>
                <fullName>75% sites ready to enroll</fullName>
            </value>
            <value>
                <fullName>50% enrollment complete</fullName>
                <label>50% enrollment complete (LPFT)</label>
            </value>
            <value>
                <fullName>100% enrollment complete (LPFT)</fullName>
            </value>
            <value>
                <fullName>-- enter goal manually --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>