force-app/main/default/objects/GsGoal__c/fields/GsStatus__c.field-meta.xml
<CustomField>
    <fullName>GsStatus__c</fullName>
    <description>Picklist for the goal&apos;s status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Achieved</fullName>
            </value>
            <value>
                <fullName>Not Achieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>