force-app/main/default/objects/GsGoal__c/fields/GsStudyNumber__c.field-meta.xml
<CustomField>
    <fullName>GsStudyNumber__c</fullName>
    <description>The goal&apos;s study number</description>
    <label>Study Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>