force-app/main/default/objects/GsGoal__c/fields/GsTargetDate__c.field-meta.xml
<CustomField>
    <fullName>GsTargetDate__c</fullName>
    <description>The “Target Date” will be entered by the user in the “New Goal”, “Edit Goal” and “Revise Goal” flows in case the goal record type is “LabCorp Goal” or “Parexel Goal”. Otherwise, the target date is entered by these flows while setting the day to the last day of the selected “Target Month”.</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>