force-app/main/default/objects/GsGoal__c/fields/GsTargetMonth__c.field-meta.xml
<CustomField>
    <fullName>GsTargetMonth__c</fullName>
    <description>The “Target Month” is a month selection field that is filled by the user in the “New Goal”, “Edit Goal” and “Revise Goal” flows in case the goal record type is any other than “LabCorp Goal” and “Parexel Goal”</description>
    <label>Target Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>