force-app/main/default/objects/GsGoal__c/fields/GsWithdrawn__c.field-meta.xml
<CustomField>
    <fullName>GsWithdrawn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the goal is withdrawn</description>
    <label>Withdrawn</label>
    <type>Checkbox</type>
</CustomField>