force-app/main/default/objects/GsGoal__c/fields/GsWithdrawnComment__c.field-meta.xml
<CustomField>
    <fullName>GsWithdrawnComment__c</fullName>
    <description>The user is prompted to enter a comment for withdrawn goals during the “Withdraw Goal” flow. It will be cleared automatically in the “Undo Withdrawal” flow.</description>
    <label>Withdrawn Comment</label>
    <type>TextArea</type>
</CustomField>