force-app/main/default/objects/GsGoal__c/recordTypes/clinical_team_goal.recordType-meta.xml
<RecordType>
    <fullName>clinical_team_goal</fullName>
    <active>true</active>
    <label>clinical team goal</label>
</RecordType>