force-app/main/default/objects/GsGoal__c/recordTypes/GsCountryRecruitmentGoal.recordType-meta.xml
<RecordType>
    <fullName>GsCountryRecruitmentGoal</fullName>
    <active>true</active>
    <description>Legacy record type for migration purpose</description>
    <label>Country Recruitment Goal</label>
</RecordType>