force-app/main/default/objects/GsGoal__c/recordTypes/GsCovanceGoal.recordType-meta.xml
<RecordType>
    <fullName>GsCovanceGoal</fullName>
    <active>true</active>
    <description>Legacy record type for migrated goals</description>
    <label>Covance Goal</label>
</RecordType>