force-app/main/default/objects/GsGoal__c/recordTypes/GsCroGoal.recordType-meta.xml
<RecordType>
    <fullName>GsCroGoal</fullName>
    <active>true</active>
    <label>CRO Goal</label>
</RecordType>