force-app/main/default/objects/GsGoal__c/recordTypes/GsParexelGoal.recordType-meta.xml
<RecordType>
    <fullName>GsParexelGoal</fullName>
    <active>true</active>
    <label>Parexel Goal</label>
</RecordType>