force-app/main/default/objects/GsGoal__c/recordTypes/LabCorp_Goal.recordType-meta.xml
<RecordType>
    <fullName>LabCorp_Goal</fullName>
    <active>true</active>
    <label>LabCorp Goal</label>
</RecordType>