force-app/main/default/objects/GsGoal__c/recordTypes/study_team_goal.recordType-meta.xml
<RecordType>
    <fullName>study_team_goal</fullName>
    <active>true</active>
    <label>study team goal</label>
</RecordType>