force-app/main/default/objects/GsGoal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>GsLockIcon__c</columns>
    <columns>GsProject__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>GsGoalTitle__c</columns>
    <columns>GsKeyGoal__c</columns>
    <columns>GsProgress__c</columns>
    <columns>GsTargetFormula__c</columns>
    <columns>GsAchieved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>