force-app/main/default/objects/GsGoal__c/listViews/Gs2023AllGoals.listView-meta.xml
<ListView>
    <fullName>Gs2023AllGoals</fullName>
    <columns>GsLockIcon__c</columns>
    <columns>GsProject__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>GsGoalTitle__c</columns>
    <columns>GsKeyGoal__c</columns>
    <columns>GsProgress__c</columns>
    <columns>GsTargetFormula__c</columns>
    <columns>GsAchieved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GsGoalPeriod__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>2023 - All Goals</label>
</ListView>