force-app/main/default/objects/GsGoal__c/listViews/GsCroGoal.listView-meta.xml
<ListView>
    <fullName>GsCroGoal</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>GsLockIcon__c</columns>
    <columns>GsProject__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>GsGoalTitle__c</columns>
    <columns>GsKeyGoal__c</columns>
    <columns>GsProgress__c</columns>
    <columns>GsTargetFormula__c</columns>
    <columns>GsAchieved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GsGoal__c.GsCroGoal</value>
    </filters>
    <filters>
        <field>GsCroGoal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CRO Goal</label>
</ListView>