force-app/main/default/objects/GsGoal__c/listViews/StudyTeamGoals.listView-meta.xml
<ListView>
    <fullName>StudyTeamGoals</fullName>
    <columns>GsLockIcon__c</columns>
    <columns>GsProject__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>GsGoalTitle__c</columns>
    <columns>GsKeyGoal__c</columns>
    <columns>GsProgress__c</columns>
    <columns>GsTargetFormula__c</columns>
    <columns>GsAchieved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GsGoal__c.study_team_goal</value>
    </filters>
    <label>Study Team Goals</label>
</ListView>